--- a/templates/register.html
+++ b/templates/register.html
@@ -4,17 +4,51 @@
 
 <h2 class="lowerer">Register for MBMT</h2>
 <p>
-Welcome to the 3rd Annual MBMT, held on April 22nd, 2017! On this form, you may officially register a single team for the competition. Good luck to all teams and hope to see you there!
+Welcome to the 3rd Annual MBMT, held on April 22nd, 2017! On this form, you may officially register a single team for the competition. Good luck to all teams and hope to see you there! <b>A note on sponsors</b>: we highly encourage schools' math team coaches or math resource department chairs to act as sponsors; however, any adult who is willing to supervise the team is fine.
 </p>
 
-<form name="registration" class="form-group">
+<form name="registration" data-toggle="validator" role="form">
 
-    <label class="name">School Name</label>
-    <input name="schoolName" type="text" class="form-control">
+    <script src="/static/js/validator.min.js"></script>
     
-    <label class="name">Sponsor Name</label>
-    <label class="description">We highly encourage schools' math team coaches or math resource department chairs to act as sponsors; however, any adult who is willing to supervise the team is fine.</label>
-    <input name="schoolName" type="text" class="form-control">
+    <div class="form-group has-feedback">
+        <label class="name">School Name</label>
+        <label class="description">The name of <b>your</b> school.</label>
+        <input name="schoolName" type="text" class="form-control" required>
+    </div>
+
+    <div class="form-group has-feedback">
+        <label class="name">Sponsor Name</label>
+        <label class="description">Full name of the sponsor</label>
+        <input name="sponsorName" type="text" class="form-control" required>
+    </div>
+    
+    <div class="form-group has-feedback">
+        <label class="name">Sponsor Contact</label>
+        <label class="description">Sponsor phone number or email.</label>
+        <input name="sponsorContact" type="text" class="form-control" required>
+    </div>
+    
+    <div class="form-group has-feedback">
+        <label class="name">Other sponsors</label>
+        <label class="description">Additional sponsor names and phone numbers or emails.</label>
+        <input name="otherSponsors" type="text" class="form-control">
+    </div>
+    
+    <div class="form-group">
+        <label class="name">Team Division</label>
+        <div class="radio">
+          <label><input type="radio" name="underwear" required> Division A</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="underwear" required> Division B</label>
+        </div>
+    </div>
+    
+    <div class="form-group">
+        <input id="submit" type="submit" value="Finish" class="btn btn-primary right"/>
+        <input id="cancel" type="button" value="Cancel" class="btn btn-secondary right" onclick="window.location = '/';"/>
+    </div>
     
 </form>
 
