Removed team from registration.

--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h2 class="lowerer">Register for MBMT</h2>
+<h2 class="lowerer">Sponsor Registration for MBMT</h2>
 <p>
 Welcome to the 3rd Annual MBMT, held on April 22nd, 2017! On this form, you may officially register a single team for the competition. Good luck to all teams and hope to see you there! <b>A note on sponsors</b>: we highly encourage schools' math team coaches or math resource department chairs to act as sponsors; however, any adult who is willing to supervise the team is fine.
 </p>
@@ -33,16 +33,6 @@ Welcome to the 3rd Annual MBMT, held on April 22nd, 2017! On this form, you may 
         <label class="name">Other sponsors</label>
         <label class="description">Additional sponsor names and phone numbers or emails.</label>
         <input name="otherSponsors" type="text" class="form-control">
-    </div>
-    
-    <div class="form-group">
-        <label class="name">Team Division</label>
-        <div class="radio">
-          <label><input type="radio" name="underwear" required> Division A</label>
-        </div>
-        <div class="radio">
-          <label><input type="radio" name="underwear" required> Division B</label>
-        </div>
     </div>
     
     <div class="form-group">
