--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -9,21 +10,8 @@ Welcome to the 3rd Annual MBMT, held on April 22nd, 2017! We highly encourage sc
 
 <form name="registration" data-toggle="validator" role="form" method="post">
     <script src="/static/js/validator.min.js"></script>
-    
-    <div class="form-group has-feedback">
-        <label class="name">School Name</label>
-        <input name="school" type="text" class="form-control" required>
-    </div>
 
-    <div class="form-group has-feedback">
-        <label class="name">Sponsor Name</label>
-        <input name="sponsor" type="text" class="form-control" required>
-    </div>
-    
-    <div class="form-group has-feedback">
-        <label class="name">Sponsor Contact</label>
-        <input name="email" type="text" class="form-control" required>
-    </div>
+    {% crispy form %}
     
     <div class="form-group">
         <input id="submit" type="submit" value="Finish" class="btn btn-primary right"/>
