fixed everything up for you ;)

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -15,7 +15,7 @@ Welcome to the 3rd Annual MBMT, held on April 22nd, 2017! We highly encourage sc
     
     <div class="form-group">
         <input id="submit" type="submit" value="Finish" class="btn btn-primary right"/>
-        <input id="cancel" type="button" value="Cancel" class="btn btn-secondary right" onclick="window.location = '/';"/>
+        <input id="cancel" type="button" value="Cancel" class="btn btn-secondary right" onclick="window.location = '{% url 'index' %}';"/>
     </div>
     
 </form>
