--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,12 +13,13 @@
             <div class="container">
                 <ul class="nav navbar-nav navbar-left">
                     <li><a href="{% url 'index' %}">MBMT</a></li>
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/rules">Rules</a></li>
+                    <li><a href="{% url 'about' %}">About</a></li>
+                    <li><a href="{% url 'rules' %}">Rules</a></li>
+                    <li><a href="{% url 'registration' %}">Registration</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="{% url 'register' %}">Register</a></li>
-                    <li><a href="/login">Login</a></li>
+                    <li><a href="{% url 'login' %}">Login</a></li>
                 </ul>
             </div>
         </nav>
