QuestionsField correctly stores question answers

--- a/app/static/css/master.css
+++ b/app/static/css/master.css
@@ -1,6 +1,6 @@
-@media (min-width: 1200px) {
-    .container { max-width: 940px; }
-}
+/*@media (min-width: 1200px) {*/
+    /*.container { max-width: 940px; }*/
+/*}*/
 
 body {
     margin-bottom: 4em;
