--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h2 class="lowerer">Sponsor Login</h2>
+<h2 class="lowererer">Sponsor Login</h2>
 
 <form name="registration" data-toggle="validator" role="form" method="post">
     <script src="{% static "js/validator.min.js" %}"></script>
