--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h2 class="lowerer">Sponsor Registration for MBMT</h2>
+<h2 class="lower">Sponsor Registration for MBMT</h2>
 <p>
 Welcome to the 3rd Annual MBMT, held on April 22nd, 2017! We highly encourage schools' math team coaches or math resource department chairs to act as sponsors; however, any adult who is willing to supervise the team is fine.
 </p>
