--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
         <script type="text/javascript" src="{% static "js/email.js" %}"></script>
     </head>
     <body>
-        <nav id="menu" class="navbar navbar-default navbar-static-top navbar-xs">
+        <nav id="menu" class="navbar navbar-default navbar-fixed-top navbar-xs">
             <div class="container">
                 <ul class="nav navbar-nav navbar-left">
                     <li><a href="{% url 'index' %}">MBMT</a></li>
@@ -36,6 +36,11 @@
                 </ul>
             </div>
         </nav>
+
+        {% if not no_splash %}
+            <img id="splash" src="http://t.realgeeks.media/thumbnail/xXdbN3JHWSu6hZi_mgdnEskkLxI=/fit-in/0x720/u.realgeeks.media/mocorealestate/headers/header-school-blair.jpg"/>
+        {% endif %}
+
         <div class="container">
             <div id="content" class="container-fluid">
                 {% block content %}
