--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,11 +4,11 @@
     <head>
         <meta charset="UTF-8">
         <title>MBMT</title>
-        <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
-        <link rel="stylesheet" type="text/css" href="{% static "css/master.css" %}">
-        <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
-        <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
-        <script type="text/javascript" src="{% static "js/email.js" %}"></script>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/master.css' %}">
+        <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/email.js' %}"></script>
     </head>
     <body>
         <nav id="menu" class="navbar navbar-default navbar-fixed-top navbar-xs">
@@ -20,19 +20,18 @@
                     <li><a href="{% url 'rules' %}">Rules</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    {% if request.user.is_authenticated %}
-                        {% if perms.app.can_grade %}
-                            <li><a href="{% url 'grade' %}">Grading</a></li>
-                        {% else %}
-                            <li><a href="{% url 'teams' %}">My Teams</a></li>
-                        {% endif %}
-
-                        <li><a href="{% url 'logout' %}">Logout
-                        </a></li>
-                    {% else %}
-                        <li><a href="{% url 'register' %}">Register</a></li>
-                        <li><a href="{% url 'login' %}">Login</a></li>
-                    {% endif %}
+                {% if request.user.is_authenticated %}
+                {% if perms.app.can_grade %}
+                    <li><a href="{% url 'grade' %}">Grading</a></li>
+                {% else %}
+                    <li><a href="{% url 'teams' %}">My Teams</a></li>
+                {% endif %}
+                    <li><a href="{% url 'logout' %}">Logout
+                    </a></li>
+                {% else %}
+                    <li><a href="{% url 'register' %}">Register</a></li>
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                {% endif %}
                 </ul>
             </div>
         </nav>
