--- a/app/templates/team.html
+++ b/app/templates/team.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <h2 class="lowerer">Team</h2>
-
+<p>{% if error_message%}{{ error_message }}{% endif %}</p>
 
 <form name="registration" data-toggle="validator" role="form" method="post">
     {% crispy team_form %}
