--- a/app/templates/teams.html
+++ b/app/templates/teams.html
@@ -4,33 +4,31 @@
 
 <h2 class="lowerer"><strong>{{ request.user.school.name }}</strong> Teams</h2>
 
-{% if not request.user.school.teams %}
-    <p>
-        Looks like you don't have any teams yet!
-    </p>
-{% else %}
-    <table class="table table-striped table-hover">
-        <tr>
-            <th>Name</th>
-            <th>Members</th>
-        </tr>
-
-        {% for team in request.user.school.teams.all %}
-            <tr>
-                <td>{{ team.name }}</td>
-                <td>
-                    <ul>
-                        {% for student in team.students.all %}
-                            <li>{{ student.name }} ({{ student.get_subject1_display }}, {{ student.get_subject2_display }})</li>
-                        {% endfor %}
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
-{% endif %}
-
-<br/>
-<a href="{% url 'add_team' %}">+ Add Team</a>
+<table id="teams" class="table">
+    <tr style="background-color: #f9f9f9;">
+        <th>Name</th>
+        <th>Members</th>
+    </tr>
+    {% for team in request.user.school.teams.all %}
+    <tr>
+        <td>
+            {{ team.name }}<br>
+            <a href="/teams/edit?id={{ team.id }}">Edit</a>
+            <a href="/teams/remove?id={{ team.id }}">Remove</a>
+        </td>
+        <td>
+            <ul>
+                {% for student in team.students.all %}
+                    <li>{{ student.name }} ({{ student.get_subject1_display }}, {{ student.get_subject2_display }})</li>
+                {% endfor %}
+            </ul>
+        </td>
+    </tr>
+    {% endfor %}
+    <tr>
+        <td><a href="{% url 'add_team' %}">+ Add Team</a></td>
+        <td></td>
+    </tr>
+</table>
 
 {% endblock %}
