--- a/app/static/css/master.css
+++ b/app/static/css/master.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700|Slabo+27px');
+
 body {
     margin-top: 50px;
     margin-bottom: 2em;
     overflow-y: scroll;
+    font-family: 'Roboto';
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Slabo 27px';
 }
 
 #menu {
