--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h2 class="lowerer">About MBMT</h2>
+<h1 class="lowerer">About MBMT</h1>
 
 <p>We are pleased to announce that, for the third year, the Montgomery Blair Math Team is hosting the Montgomery Blair Math Tournament (MBMT) on <b>Saturday April 22, 2017!</b> MBMT is a free middle school math competition that seeks to excite students’ interests in mathematics and pursuing mathematics beyond the school curriculum.</p>
 
@@ -10,7 +10,7 @@
 <p>We would like all math team sponsors to <b>register by January 31th, 2017</b>. This will help us estimate the number of teams participating and assist us with logistics. To see more information on registration, visit <a href="/registration">here</a>. To register, visit <a href="/register">here</a>.</p>
 
 <h3>Logistics</h3>
-<p>The 3rd annual MBMT will occur in <strong>Montgomery Blair HS on April 22, 2017 from 12:00 pm - 6:00 pm</strong>. Our address is <a href="ace/Montgomery+Blair+High+School/@39.0183042,-77.0138447,17z/data=!3m1!4b1!4m5!3m4!1s0x89b7cf586f9b73d5:0xc227c473fffb50c7!8m2!3d39.0183042!4d-77.011656"><strong>51 University Blvd E, Silver Spring, MD 20901</strong></a>. Please arrive on the University Boulevard side of the school. <b>Pizza and drinks will be provided for students</b>. This is a change from last year. Additionally, snacks will be provided for coaches in the grading room (room 161, a computer lab). Coaches are invited to bring snacks for their own team, although it is not necessary.</p>
+<p>The 3rd annual MBMT will occur in <strong>Montgomery Blair HS on April 22, 2017 from 12:00 pm - 6:00 pm</strong>. Our address is <a href="https://www.google.com/maps/place/Montgomery+Blair+High+School/@39.0183042,-77.01385,17z/data=!3m1!4b1!4m5!3m4!1s0x89b7cf586f9b73d5:0xc227c473fffb50c7!8m2!3d39.0183042!4d-77.011656"><strong>51 University Blvd E, Silver Spring, MD 20901</strong></a>. Please arrive on the University Boulevard side of the school. <b>Pizza and drinks will be provided for students</b>. This is a change from last year. Additionally, snacks will be provided for coaches in the grading room (room 161, a computer lab). Coaches are invited to bring snacks for their own team, although it is not necessary.</p>
 
 <h3>Contest</h3>
 <p>MBMT consists of four rounds: the Subject Tests (of which students take two subjects among Algebra, Geometry, Combinatorics, or Properties of Numbers), the Team Round, the Guts Round, and the Fun Round. Please note that there is no Sprint Round this year. Each Subject Test consists of eight questions on one subject and also lasts thirty minutes. The Team Round contains fifteen questions for all team members to collaboratively solve in half an hour. The Guts Round (something many middle school students have not seen before) is graded live, and requires team members to work together on progressively harder five-problem sets, each of which is worth more points than the previous set. Finally, the Fun Round is an exciting, new round consisting of several separate mini-events, including puzzles, trivia, and an estimation round. All of the rounds, except for the Fun Round, will be split by division. </p>
@@ -30,7 +30,7 @@
 </table>
 
 <h3>Contact</h3>
-<p>If you have any questions, please contact the Montgomery Blair math team captains at <script>email("mbhs.math.team", "gmail.com");</script>, or our coach, David Stein, at <script>email("David_O_Stein", "mcpsmd.org");</script></p>
+<p>If you have any questions, please contact the Montgomery Blair math team captains at <script>email("mbhs.math.team", "gmail.com");</script>, or our coach, David Stein, at <script>email("David_O_Stein", "mcpsmd.org");</script>.</p>
 
 <h3>Summary</h3>
 <p>Once again, the interest form may be found <a href="https://goo.gl/forms/HHHHMhQ6UXP1praL2">here</a>. We would like responses from all math team sponsors by January 31, 2017. The registration is always available through this site. We will send out additional details and a formal rules packet for the upcoming competition at the beginning of February. </p>
