--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,33 +12,41 @@
     </head>
     <body>
         <nav id="menu" class="navbar navbar-default navbar-fixed-top navbar-xs">
-            <div class="container">
-                <ul class="nav navbar-nav navbar-left">
-                    <li><a href="{% url 'index' %}">MBMT</a></li>
-                    <li><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="{% url 'topics' %}">Topics</a></li>
-                    <li><a href="{% url 'rules' %}">Rules</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                {% if request.user.is_authenticated %}
-                {% if perms.app.can_grade %}
-                    <li><a href="{% url 'grade' %}">Grading</a></li>
-                {% else %}
-                    <li><a href="{% url 'teams' %}">My Teams</a></li>
-                {% endif %}
-                    <li><a href="{% url 'logout' %}">Logout
-                    </a></li>
-                {% else %}
-                    <li><a href="{% url 'register' %}">Register</a></li>
-                    <li><a href="{% url 'login' %}">Login</a></li>
-                {% endif %}
-                </ul>
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+
+                  <a class="navbar-brand" href="{% url 'index' %}">MBMT</a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="nav-collapse">
+                    <ul class="nav navbar-nav navbar-left">
+                        <li><a href="{% url 'about' %}">About</a></li>
+                        <li><a href="{% url 'topics' %}">Topics</a></li>
+                        <li><a href="{% url 'rules' %}">Rules</a></li>
+                    </ul>
+
+                    <ul class="nav navbar-nav navbar-right">
+                    {% if request.user.is_authenticated %}
+                    {% if perms.app.can_grade %}
+                        <li><a href="{% url 'grade' %}">Grading</a></li>
+                    {% else %}
+                        <li><a href="{% url 'teams' %}">My Teams</a></li>
+                    {% endif %}
+                        <li><a href="{% url 'logout' %}">Logout
+                        </a></li>
+                    {% else %}
+                        <li><a href="{% url 'register' %}">Register</a></li>
+                        <li><a href="{% url 'login' %}">Login</a></li>
+                    {% endif %}
+                    </ul>
+                </div>
             </div>
         </nav>
-
-        {% if not no_splash %}
-            <img id="splash" src="http://t.realgeeks.media/thumbnail/xXdbN3JHWSu6hZi_mgdnEskkLxI=/fit-in/0x720/u.realgeeks.media/mocorealestate/headers/header-school-blair.jpg"/>
-        {% endif %}
 
         <div class="container">
             <div id="content" class="container-fluid">
