--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,13 +2,46 @@
 
 {% block content %}
 
-<h1 class="title lower">MBMT</h1>
-<p class="tagline">Montgomery Blair Mathematics Tournament</p>
-    
-<p class="center">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et consequat purus, ac commodo elit. Phasellus fermentum consectetur tempus. Vestibulum blandit, nisl congue elementum sollicitudin, ligula lacus vulputate neque, nec tristique massa leo congue nibh. Nulla et egestas nibh. Aliquam et purus mi. Ut a mauris gravida, malesuada ligula tempus, iaculis est. Vivamus non varius felis. Morbi blandit orci ac augue rutrum mollis. Fusce et malesuada elit, ut auctor felis. Nullam maximus leo sed metus vestibulum, ut vulputate dui luctus. Proin ut sem et dui auctor tempor. Morbi dapibus congue arcu sit amet maximus. Sed sed sem eget tortor euismod fermentum vitae sit amet ipsum. Phasellus finibus dui nec ante suscipit porta. Donec porttitor rutrum nulla, at maximus orci porttitor nec. Aenean diam lectus, consectetur id tincidunt eu, ultrices in leo.
-</p>
+<h1 class="title lower"><span class="title-left">MB</span><span class="title-right">MT</span></h1>
 
+<br/>
+
+<p class="main-text">
+    <span class="text-muted">The</span>
+    <strong>Montgomery Blair Math Tournament</strong>. <br/><br/>
+    <span class="text-muted">A</span>
+    <strong>mathematics competition</strong>
+    <span class="text-muted">for</span>
+    <strong>middle school students</strong>
+    <span class="text-muted">in</span>
+    <strong>Montgomery County, Maryland</strong>
+    <span class="text-muted">on</span>
+    <strong>Saturday, April 22nd, 2017</strong>.</p>
+
+<div class="row">
+    <div class="col-lg-4">
+        <h2>Solve problems.</h2>
+
+        <p><strong>MBMT is all about math.</strong> Whether you're just a beginner or a super Mathlete, you'll find
+        interesting and challenging math awaiting you at MBMT. We're passionate about math, and we want to
+        give you the best competition experience possible.</p>
+    </div>
+
+    <div class="col-lg-4">
+        <h2>Work together.</h2>
+
+        <p><strong>Life is better in teams.</strong> The competition is divided into several <em>rounds</em>, during several
+        of which you get to work together with up to three other students to collaborate to do math. You can
+        help support each other and make each other better competitors, as well as winning glory for your school!</p>
+    </div>
+
+    <div class="col-lg-4">
+        <h2>Learn math.</h2>
+
+        <p><strong>Math is everywhere!</strong> Mathematics is useful for describing all sorts of things in our
+        world, as well as all sorts of things just in our brains. MBMT will help you master all sorts of math skills,
+        both for the real world and for other math competitions.</p>
+    </div>
 </div>
 
 {% endblock %}
