--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
         <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/email.js' %}"></script>
     </head>
-    
+
     <body>
         <nav id="menu" class="navbar navbar-default navbar-fixed-top navbar-xs">
             <div class="container-fluid">
@@ -26,6 +26,7 @@
 
                 <div class="collapse navbar-collapse" id="nav-collapse">
                     <ul class="nav navbar-nav navbar-left">
+                        <li><a href="{% url 'info' %}">Info</a></li>
                         <li><a href="{% url 'about' %}">About</a></li>
                         <li><a href="{% url 'topics' %}">Topics</a></li>
                         <li><a href="{% url 'rules' %}">Rules</a></li>
@@ -55,5 +56,11 @@
                 {% endblock %}
             </div>
         </div>
+
+        <footer class="footer">
+            <div class="container">
+                <span class="text-muted">Copyright &copy; 2014-17 Montgomery Blair Math Team.</span>
+            </div>
+        </footer>
     </body>
 </html>
