--- a/app/templates/topics.html
+++ b/app/templates/topics.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-<h1 class="lowerer">MBMT Competition Topics</h1>
+<h1 class="lowerer">Competition Topics</h1>
+
 <p>While all of the following topics will likely be tested on the competition, the bolded topics are most likely to appear. We have divided the topics into our subject test categories.</p>
 
 <h2>Algebra</h2>
