proper about images

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -11,37 +11,37 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
 
 <div class="row">
     <div class="col-lg-3 about-person">
-        <img src="{% static 'images/people/david_wu.png' %}">
+        <img src="{% static 'images/people/david.png' %}">
         <h3>David Wu</h3>
         Logistics
     </div>
 
     <div class="col-lg-3 about-person">
-        <img src="{% static 'images/people/david_wu.png' %}">
+        <img src="{% static 'images/people/annie.png' %}">
         <h3>Annie Zhao</h3>
         Communications
     </div>
 
     <div class="col-lg-3 about-person">
-        <img src="{% static 'images/people/david_wu.png' %}">
+        <img src="{% static 'images/people/jamie.png' %}">
         <h3>Jamie Vinson</h3>
         Competition Day
     </div>
 
     <div class="col-lg-3 about-person">
-        <img src="{% static 'images/people/david_wu.png' %}">
+        <img src="{% static 'images/people/sambuddha.png' %}">
         <h3>Sambuddha Chattopadhyay</h3>
         Logistics
     </div>
 
     <div class="col-lg-3 about-person">
-        <img src="{% static 'images/people/david_wu.png' %}">
+        <img src="{% static 'images/people/guang.png' %}">
         <h3>Guang Cui</h3>
         Problem Czar
     </div>
 
     <div class="col-lg-3 about-person">
-        <img src="{% static 'images/people/david_wu.png' %}">
+        <img src="{% static 'images/people/pratik.png' %}">
         <h3>Pratik Rathore</h3>
         Problem Czar
     </div>
