updated content date

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,11 @@
     <span class="text-muted">in</span>
     <strong>Montgomery County, Maryland</strong>
     <span class="text-muted">on</span>
-    <strong>Saturday, April 22nd, 2017</strong>.</p>
+    <strong>Saturday, April 1st, 2017</strong>.</p>
+
+<br/>
+<button class="btn btn-success btn-register" onclick="window.location.href='{% url 'register' %}';">Register here!</button>
+<br/><br/>
 
 <div class="row">
     <div class="col-lg-4">
