minor text updates

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,8 +13,8 @@
     <strong>mathematics competition</strong>
     <span class="text-muted">for</span>
     <strong>middle school students</strong>
-    <span class="text-muted">in</span>
-    <strong>Montgomery County, Maryland</strong>
+    <span class="text-muted">in the</span>
+    <strong>Maryland area</strong>
     <span class="text-muted">on</span>
     <strong>Saturday, April 1st, 2017</strong>.</p>
 
