--- a/app/templates/rules.html
+++ b/app/templates/rules.html
@@ -29,7 +29,7 @@ Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a f
     <li><b>The Subject Test round</b> consists of eight questions on one subject and lasts thirty minutes. The subjects are <b>Algebra</b>, <b>Geometry</b>, <b>Counting and Probability</b>, and <b>Number Theory</b>.</li>
     <li><b>The Team round</b> contains fifteen questions for all team members to collaboratively solve in half an hour.</li>
     <li><b>The Guts round</b> is an intense but exciting round in which competing teams can see each others’ progress. It is 45 minutes long, is graded live, and requires each team to work together on progressively harder five-problem sets. Each new set is worth more points than the previous set. This year, <b class="red">different divisions will have different Guts round questions</b>. Note that <b>there are no benefits of turning in the last set early</b>. There are no bonus points for timing. Please also note that <b class="red">the weighting system for the later problems has been tweaked</b> to more accurately reflect difficulty.
-    <li><b>the Fun round</b> is an exciting, new round consisting of several separate mini-events, including puzzles, trivia, and an estimation round.</li>
+    <li><b>The Fun round</b> is an exciting, new round consisting of several separate mini-events, including puzzles, trivia, and an estimation round.</li>
 </ol>
 
 <h3>Answering Questions</h3>
