--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>MBMT</title>
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/master.css' %}">
@@ -30,6 +31,7 @@
                         <li><a href="{% url 'about' %}">About</a></li>
                         <li><a href="{% url 'topics' %}">Topics</a></li>
                         <li><a href="{% url 'rules' %}">Rules</a></li>
+                        <li><a href="{% url 'archive' %}">Archive</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
