some more mobile optimization

--- a/static/css/master.css
+++ b/static/css/master.css
@@ -54,7 +54,7 @@ input {
 .lowererer { margin-top: 3em; }
 
 h1.title {
-    font-size: 10em;
+    font-size: 10vw;
     text-align: center;
     padding: .2em;
 }
