--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1 class="title lower"><span class="title-left">MB</span><span class="title-right">MT</span></h1>
+<h1 class="title lowerer"><span class="title-left">MB</span><span class="title-right">MT</span></h1>
 
 <br/>
 
