--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
     <strong>Saturday, April 1st, 2017</strong>.</p>
 
 <br/>
-<button class="btn btn-success btn-register" onclick="window.location.href='{% url 'register' %}';">Register here!</button>
+<button class="btn btn-danger btn-register" onclick="window.location.href='{% url 'register' %}';">Register here!</button>
 <br/><br/>
 
 <div class="row">
