--- a/app/templates/info.html
+++ b/app/templates/info.html
@@ -33,7 +33,7 @@
 <p>If you have any questions, please contact the Montgomery Blair math team captains at <script>email("mbhs.math.team", "gmail.com");</script>, or our coach, David Stein, at <script>email("David_O_Stein", "mcpsmd.org");</script>.</p>
 
 <h3>Summary</h3>
-<p>Once again, the interest form may be found <a href="https://goo.gl/forms/HHHHMhQ6UXP1praL2">here</a>. We would like responses from all math team sponsors by January 31, 2017. The registration is always available through this site. We will send out additional details and a formal rules packet for the upcoming competition at the beginning of February. </p>
+<p>Once again, the interest form may be found <a href="https://goo.gl/forms/HHHHMhQ6UXP1praL2">here</a>. We would like responses from all math team sponsors by March 1st, 2017. The registration is always available through this site. We will send out additional details and a formal rules packet for the upcoming competition at the beginning of February. </p>
 <p>We look forward to seeing you and your Mathletes at the 3rd annual MBMT!</p>
 
 {% endblock %}
