--- a/app/templates/rules.html
+++ b/app/templates/rules.html
@@ -4,7 +4,7 @@
 
 <h1 class="lowerer">MBMT Official Contest Rules</h1>
 <p>
-Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a free middle school math contest that seeks to inspire students’ interest in mathematics and to encourage them to explore math beyond the school curriculum. This year, MBMT will be hosted at Montgomery Blair High School (MBHS) on April 22, 2017. This packet includes all the information about the competition, as well as contact information in case you have additional questions.
+Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a free middle school math contest that seeks to inspire students’ interest in mathematics and to encourage them to explore math beyond the school curriculum. This year, MBMT will be hosted at Montgomery Blair High School (MBHS) on April 1st, 2017. This packet includes all the information about the competition, as well as contact information in case you have additional questions.
 </p>
 
 <h3>Registration</h3>
@@ -17,7 +17,7 @@ Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a f
         <li>A team of 3 will only be required to have at least 1 test per subject.</li>
         <li>Teams of 1 or 2 have no restrictions; however, refer to section IId. for more information on teams of 1 or 2.</li>
     </ol>
-    <li>Teams compete in 1 of <b>2 divisions</b>: Division A, “Pascal,” or Division B, “Ramanujan.” Division A is suggested for students with more practice in competitions, whereas Division B is geared towards students with less experience. To suit different students’ abilities, each division offer different sets of questions in <b>all rounds</b> (discussed further in Section III).</li>
+    <li>Teams compete in 1 of <b>2 divisions</b>: Division A, <strong>Pascal</strong>, or Division B, <strong>Ramanujan.</strong> Division A is suggested for students with more practice in competitions, whereas Division B is geared towards students with less experience. To suit different students’ abilities, each division offer different sets of questions in <b>all rounds</b> (discussed further in Section III).</li>
     <li>If there are fewer than 5 students interested in participating, you may register incomplete teams. For an incomplete team’s Team and Guts round scores to be officially considered, incomplete teams must have <b>at least 3 students</b>. Teams with one or two students may compete, but their Team and Guts round will not be officially graded. As with the previous two years, <b>we do not</b> allow organizations to register both a complete and an incomplete team in the same division.</li>
     <li>We <b>do not</b> allow mixed-school or mixed-organization teams. However, we do allow organizations consisting of students from multiple schools, home-school groups, and community activity groups to name a few.</li>
     <li>We <b>do not</b> allow elementary school students to participate in MBMT. </li>
