--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -5,7 +5,7 @@
 
 <h2 class="lower">Sponsor Registration for MBMT</h2>
 <p>
-Welcome to the 3rd Annual MBMT, held on April 22nd, 2017! We highly encourage schools' math team coaches or math resource department chairs to act as sponsors; however, any adult who is willing to supervise the team is fine.
+Welcome to the 3rd Annual MBMT, held on April 1st, 2017! We highly encourage schools' math team coaches or math resource department chairs to act as sponsors; however, any adult who is willing to supervise the team is fine.
 </p>
 
 <form name="registration" data-toggle="validator" role="form" method="post">
@@ -17,7 +17,6 @@ Welcome to the 3rd Annual MBMT, held on April 22nd, 2017! We highly encourage sc
         <input id="submit" type="submit" value="Finish" class="btn btn-primary right"/>
         <input id="cancel" type="button" value="Cancel" class="btn btn-secondary right" onclick="window.location = '{% url 'index' %}';"/>
     </div>
-    
 </form>
 
 {% endblock %}
