--- a/app/templates/rules.html
+++ b/app/templates/rules.html
@@ -7,7 +7,7 @@
 Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a free middle school math contest that seeks to inspire students’ interest in mathematics and to encourage them to explore math beyond the school curriculum. This year, MBMT will be hosted at Montgomery Blair High School (MBHS) on April 1st, 2017. This packet includes all the information about the competition, as well as contact information in case you have additional questions.
 </p>
 
-<h3>Registration</h3>
+<a name="registration"></a><h3>Registration</h3>
 <ol class="top"> 
     <li>Participants in MBMT compete in teams of 5 (with some exceptions, discussed further in IIb, IId). The math team sponsors of each school/organization register individual student teams through the Official Registration Form sent in a previous email. There is no limit to the number of full teams a school or organization may send.</li>
     <li><b class="red">Subject Tests are specifically limited</b>. The goal of this policy is twofold: to make the subjects more competitive and balanced, and to perhaps introduce other topics of math not normally found in the classroom setting. More information about the Subject Tests can be found in section IIIa.</li>
@@ -24,7 +24,7 @@ Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a f
     <li>Finally, <b>any school or organization with students in grades 6-8 can register and attend</b>.</li>
 </ol>
 
-<h3>Round Format</h3>
+<a name="format"></a><h3>Round Format</h3>
 <ol class="top">
     <li><b>The Subject Test round</b> consists of eight questions on one subject and lasts thirty minutes. The subjects are <b>Algebra</b>, <b>Geometry</b>, <b>Counting and Probability</b>, and <b>Number Theory</b>.</li>
     <li><b>The Team round</b> contains fifteen questions for all team members to collaboratively solve in half an hour.</li>
@@ -32,7 +32,7 @@ Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a f
     <li><b>The Fun round</b> is an exciting, new round consisting of several separate mini-events, including puzzles, trivia, and an estimation round.</li>
 </ol>
 
-<h3>Answering Questions</h3>
+<a name="answering"></a><h3>Answering Questions</h3>
 <ol>
     <li>For fractional answers whose numerator and denominator are both integers, fractions should be written in simplified form. We do not accept mixed fractions.</li>
     <li>Rationalizing denominators is <strong>optional.</strong></li>
@@ -43,7 +43,7 @@ Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a f
     <li>If a question specifies an answer form, such as a + b*sqrt(2), please adhere to the specified form.</li>
 </ol>
 
-<h3>Scoring and Awards</h3>
+<a name="awards"></a><h3>Scoring and Awards</h3>
 <ol>
 <li>A student&rsquo;s <strong>overall individual score</strong> is the weighted sum of the two subject tests that they have taken. The <strong>top 8 individuals</strong> in each division will be recognized, and the <strong>top 5 </strong>will receive medals.</li>
 <li>Students are also ranked individually in the subject tests. The <strong>top 3 individuals</strong> of each subject test in each division are recognized. These scores are calculated through a method that accounts for test item difficulty and normalizes the scores between tests.</li>
