--- a/app/templates/teams.html
+++ b/app/templates/teams.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h2 class="lowerer"><strong>{{ request.user.school.name }}</strong> Teams</h2>
+<h2 class="lowerer"><strong>{{ request.user.school.name }}</strong>&nbsp;&nbsp;Teams</h2>
 
 <table id="teams" class="table">
     <tr style="background-color: #f9f9f9;">
@@ -13,8 +13,8 @@
     <tr>
         <td>
             {{ team.name }}<br>
-            <a href="/teams/edit?id={{ team.id }}">Edit</a>
-            <a href="/teams/remove?id={{ team.id }}">Remove</a>
+            <a href="{% url 'edit_team' team.id %}">Edit</a> |
+            <a href="{% url 'remove_team' team.id %}">Remove</a>
         </td>
         <td>
             <ul>
@@ -26,7 +26,7 @@
     </tr>
     {% endfor %}
     <tr>
-        <td><a href="{% url 'add_team' %}">+ Add Team</a></td>
+        <td><a href="{% url 'edit_team' %}">+ Add Team</a></td>
         <td></td>
     </tr>
 </table>
